--- a/src/D2RLauncher/D2RLauncher/Styling.xaml
+++ b/src/D2RLauncher/D2RLauncher/Styling.xaml
@@ -155,6 +155,12 @@
         <Setter Property="Foreground" Value="Firebrick" />
     </Style>
 
+    <Style x:Key="NavigationItemOrangeStyle" TargetType="syncfusion:NavigationItem">
+        <Setter Property="FontFamily" Value="Microsoft Sans Serif" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="Foreground" Value="#db7800" />
+    </Style>
+
     <Style
         x:Key="LabelHeaderStyle"
         BasedOn="{StaticResource WPFLabelStyle}"
