--- a/src/D2RLauncher/D2RLauncher/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLauncher/D2RLauncher/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -173,6 +173,7 @@
                             Style="{StaticResource ComboBoxStyle}" />
                         <Button
                             cm:Message.Attach="[Event Click] = [Action OnSkillBuffIconsSettings];"
+                            IsEnabled="{Binding ShellViewModel.SkillBuffIconsEnabled}"
                             Background="#0d2905"
                             Content="{Binding Path=StashTabsBtn, Source={StaticResource Resources}}"
                             Style="{StaticResource ButtonStyle}" />
@@ -368,6 +369,7 @@
                                 Width="125"
                                 Height="40"
                                 DisplayMemberPath="Key"
+                                IsEnabled="{Binding ShellViewModel.SuperTelekinesisEnabled}"
                                 ItemsSource="{Binding EnabledDisabledOptions}"
                                 SelectedIndex="{Binding ShellViewModel.UserSettings.SuperTelekinesis}"
                                 SelectedValuePath="Value"
